static/css/common.css
/* ... */
.enNone.heNone {
  color: #ccc;
}

.enNone.heSome {
  color: #C09853;
}

.enNone.heAll {
  color: #468847;
}

.enSome.heNone {
  color: #C09853;
}

.enSome.heSome {
  color: #C09853;
}

.enSome.heAll {
  color: #CA54DA;
}

.enAll.heNone {
  color: #1E347B
}

.enAll.heSome {
  color: #C09853;
}

.enAll.heAll {
  color: #08c;  
}


#gotoBox {
  float: left;
  position: relative;
  margin-top: 4px;
}

.searchInput {
  display: inline-block;
  vertical-align: middle;
  border-radius: 4px;
  border: none;
  background-color: #eee;
}

#goto {
  width: 240px;
  margin: 7px 0 6px 12px;
}

@media screen and (max-width: 930px) {
  #goto {
    width: 120px;
  }
}

#lowerSearchBox {
    position: relative;
    padding-top: 35px;
    width:70%
}

#lowerSearchBoxWrapper {
    padding-bottom: 15px;
}

#lowerSearch {
    width: 100%;
    font-size: 20px;
    padding: 8px 10px;
    height: 22px;
}

#lowerSearchBox .searchButton,
#lowerSearchBox .keyboardInputInitiator {
    top: 45px;
}

.english #lowerSearchBox .searchButton {
    right: -5px;
}

.hebrew #lowerSearchBox .searchButton {
    right: auto;
    left: -5px;
}
.hebrew #lowerSearchBox .keyboardInputInitiator {
    right: auto;
    left: 15px;
}


.searchBox .keyboardInputInitiator {
  opacity: 0;
  width: 13px;
  height: 13px;
  padding: 2px;
  background-color: #eee;
  border-radius: 3px;
  border: 1px solid #aaa;
  position: absolute;
  right: 21px;
  top: 10px;
}

.searchBox .keyboardInputInitiator:hover {
 background: #d8d8d8;
}

body #keyboardInputMaster {
  opacity: 1;
  top: 37px !important;
}

body.searchPage #keyboardInputMaster {
    top: 115px !important;
}

body #keyboardInputMaster thead tr th div {
  display: none;
}

#textTocLink {
  color: black;
  display: inline-block;
  font-family: Georiga, Serif;
  font-size: 15px;
  position: absolute;
  top: 60px;
  left: 12px;
  z-index: 1;
}


.searchButton {
  position: absolute;
  right: 6px;
  top: 12px;
  opacity: .6;
  cursor: pointer;
}

.searchButton:hover {
  opacity: 1;
}

#accountBox .ui-icon {
  display: inline-block;
  vertical-align: middle;
}

#accountBox .fa {
  display: inline-block;
  height: 28px;
  width: 18px;
  line-height: 30px;
}

#accountButton #accountMenu,
#notificationsButton #notificationsMenu {
  display: none;
  position: absolute;
  right: 0;
  top: 100%;
  padding: 0px 0px 12px 0px;
  background: white;
  border: 1px solid #aaa;
  text-shadow: none;
}

#accountMenuName {
  text-align: center;
  padding: 12px 8px;
  border-bottom: 1px solid #ddd;
}

#accountLinks {
  padding-top: 12px;
}

#accountMenu .accountLink {
  text-align: right;
}

#topLeftLinks > a,
#topLeftLinks > span {
  margin-right: 12px;
  font-family: Georgia, serif;
  font-size: 14px;
} 

#topLeftLinks #shareLink {
  display: none; 
  cursor: pointer;
}

#topLeftLinks #shareLink:hover {
  text-decoration: underline;
}

#topLeftLinks #shareLink .fa {
  font-size: 12px;
  color: #555;
}

#shareModal h3 {
  margin: 8px 0;
}

#shareModalInput {
  float: left;
  width: 300px;
  height: 24px;
  line-height: 32px;
  font-size: 16px;
}

#helpModal {
  position: absolute;
  width: 580px;
  max-width: 90%;
  text-align: left;
  padding: 25px 10px 0px;
}

#helpVideo {
  width: 100%;
  height: 348px;
}

#helpVideoButtons h3 {
  margin: 2px;
}

#helpVideoButtons {
  line-height: 1.3;
  padding: 10px;
}

#helpClose {
  position: absolute;
  top: 3px;
  right: 5px;
  cursor: pointer;
}

#helpClose:hover {
  box-shadow: 0 0 8px #08c;
  border-radius: 5px;
}

#helpMore {
  margin-top: 15px;
  text-align: center;
}

#helpMore a {
  display: inline-block;
  margin: 2px 8px;
}

#searchPanel {
  display: none;
  position: fixed;
  z-index: 99;
  top: 35px;
  left: 0;
  width: 100%;
  background-color: white;
  box-shadow: 2px 2px 10px #555;
}

.hebrew #search-instructions .en {
    display: none;
}

.english #search-instructions .he {
    display: none;
}

#searchControlsBox {
    min-height: 3px;
}

.hebrew #searchControlsBox,
.hebrew #searchContent {
    float: right;
}

.hebrew #lowerSearchBox {
    float: right;
}
.hebrew #description {
    float: right;
    clear: both;
}

#searchContent {
  font-size: 16px;
}

#searchHeader {
    padding-top: 35px;
    font-size: 20px;
    min-height: 50px;
}

.hebrew #searchHeader,
.hebrew #searchHeaderContainer {
    float: right;
}


.hebrew #lowerSearchBox,
.hebrew #lowerSearchBoxWrapper {
  direction: rtl;
  float: right;
}


#searchFilters {
    display: none;
}

/* the checkbox itself */
#searchFilters .filter {
    margin-left: 3px;
    margin-right: 3px;
}

/*
.english #searchFilters {
    margin: 0 0 0 30px;
}

.hebrew #searchFilters {
    margin: 0 30px 0 0;
}
*/

.hebrew #searchFilters { float:right;   direction: rtl;}
.hebrew #searchFilters  .en {  display: none;  }

.english #searchFilters { float:left; }
.english #searchFilters  .he {  display: none;  }


#tree-controls {
    margin: 10px 10px 0;
    font-size: 10px;
}

#tree-controls span {
    cursor: pointer;
    text-decoration: underline;
}


#searchFilters li {
    list-style-type: none;
    font-size: 15px;
    line-height: 26px;
}

.hebrew #searchFilters ul {
    margin: 0 16px 0 0;
}
.english #searchFilters ul {
    margin: 0 0 0 16px;
}

#searchResults {

}
.hebrew #searchResults {
    direction: rtl;
}

#searchResults .result {
  margin-bottom: 24px;
  line-height: 1.2;
}

.hebrew #searchResults .result .en,
.hebrew .similar-box .en {
    display: none;
}
.english #searchResults .result .he,
.english .similar-box .he {
    display: none;
}

#searchResults .result a {
  font-weight: bold;
}

#searchResults .result .version {
  font-size: 12px;
  color: #777;
  margin-top: 3px;
}

#searchResults .similar-box {
    padding: 0 40px 0 40px;
    margin-top: -26px;
    margin-bottom: 10px;
}
#searchResults .similar-box .similar-title {
    font-size: 10px;
    text-decoration: underline;
    cursor: pointer;
}
#searchResults .similar-results {
    display: none;
}
/* ... */

